--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,12 @@
         <activity android:name=".RegisterActivity">
         </activity>
         <activity android:name=".ResetPasswordActivity"></activity>
-        <activity android:name=".UploadActivity"></activity>
+
+        <activity
+            android:name=".UploadActivity"
+            android:theme="@style/Theme.AppCompat.Translucent">
+        </activity>
+
         <activity android:name=".VideoActivity"></activity>
 
     </application>
